gcc/testsuite/rust/compile/issue-3649.rs
struct T(Box<>);
// { dg-error "could not resolve type path .Box. .E0412." "" { target *-*-* } .-1 }
